# naptha-scale

./: .gitignore  README.md  launch.sh  pyproject.toml  stop_service.sh  utils.py
scale/: celery_app.py  tasks.py
workflows/: contest.py  rnd_agent.py  sum.py
